异常和常量提取 代码优化